# ctrtxlib

./: CMakeLists.txt  README.md
example/: Makefile
example/src/: main.c
include/: tx.h
include/tx/: color.h  cursor.h  misc.h  print.h  style.h
src/: cursor.c  misc.c  print.c
